force-app/main/default/objects/Test_Ride__c/Test_Ride__c.object-meta.xml
<CustomObject>
    <label>Test Ride</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Rides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>