force-app/main/default/objects/Test_Ride__c/fields/Additional_equipments_documents__c.field-meta.xml
<CustomField>
    <fullName>Additional_equipments_documents__c</fullName>
    <label>Additional equipments &amp; documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Additional_equipments_documents</valueSetName>
    </valueSet>
</CustomField>