force-app/main/default/objects/Test_Ride__c/fields/Date_time_collected__c.field-meta.xml
<CustomField>
    <fullName>Date_time_collected__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date &amp; time collected</label>
    <type>DateTime</type>
</CustomField>