force-app/main/default/objects/Test_Ride__c/fields/Date_time_returned__c.field-meta.xml
<CustomField>
    <fullName>Date_time_returned__c</fullName>
    <label>Date &amp; time returned</label>
    <type>DateTime</type>
</CustomField>