force-app/main/default/objects/Test_Ride__c/fields/Expected_to_return__c.field-meta.xml
<CustomField>
    <fullName>Expected_to_return__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Expected to return</label>
    <type>DateTime</type>
</CustomField>