force-app/main/default/objects/Test_Ride__c/fields/Senior_Team__c.field-meta.xml
<CustomField>
    <fullName>Senior_Team__c</fullName>
    <formula>IF( Owner:User.Profile.Name = &quot;Community Sale Sup&quot;,  Owner:User.LastName ,  Owner:User.Sale_Sup__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Team</label>
    <type>Text</type>
</CustomField>