force-app/main/default/objects/Test_Ride__c/fields/Test_Ride_Customer__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Ride Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Rides</relationshipLabel>
    <relationshipName>Test_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>