force-app/main/default/objects/Test_Ride__c/fields/Test_Ride_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Declaration__c</fullName>
    <label>Test Ride Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>