force-app/main/default/objects/Test_Ride__c/fields/Test_Ride_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Number__c</fullName>
    <label>Test Ride Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>