force-app/main/default/objects/Test_Ride__c/fields/TestRideNo__c.field-meta.xml
<CustomField>
    <fullName>TestRideNo__c</fullName>
    <label>TestRideNo</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>