force-app/main/default/objects/Test_Ride__c/fields/Total_Test_Ride__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Ride__c</fullName>
    <label>Total Test Ride</label>
    <summaryFilterItems>
        <field>Test_Ride_Assignment__c.Is_Actived__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Ride_Assignment__c.Test_Ride__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>