force-app/main/default/objects/Test_Ride__c/listViews/ALL_HN.listView-meta.xml
<ListView>
    <fullName>ALL_HN</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Test_Ride_Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DO_DLR__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR HA NOI</value>
    </filters>
    <label>ALL HN</label>
    <sharedTo>
        <group>Team_Sale_HN</group>
    </sharedTo>
</ListView>