force-app/main/default/objects/Test_Ride__c/listViews/ALL_SG.listView-meta.xml
<ListView>
    <fullName>ALL_SG</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Test_Ride_Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DO_DLR__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR SAI GON</value>
    </filters>
    <label>ALL SG</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>