force-app/main/default/objects/Test_Ride__c/listViews/My_Test_Rides.listView-meta.xml
<ListView>
    <fullName>My_Test_Rides</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Test_Ride_Customer__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Test Rides</label>
</ListView>